# flask-example

./: .gitignore  README.md  pyproject.toml
dev/: check.sh
docs/: flask_backend.html  index.html  search.js
docs/flask_backend/: api.html  api_v1.html  database.html  events.html  log.html  models.html
docs/flask_backend/api_v1/: items.html
docs/flask_backend/api_v1/items/: crud.html  models.html  router.html
docs/flask_backend/events/: github.html
docs/flask_backend/events/github/: models.html  router.html
docs/flask_backend/models/: item.html
flask_backend/: __init__.py  api.py  database.py  log.py
flask_backend/api_v1/: __init__.py
flask_backend/api_v1/items/: __init__.py  crud.py  models.py  router.py
flask_backend/events/: __init__.py
flask_backend/events/github/: __init__.py  models.py  router.py
flask_backend/models/: __init__.py  item.py
test/: conftest.py  test_api.py  test_github.py  test_items.py
